<resources>

    <string name="app_name">小六壬</string>

    <string name="disc_wuxing_name">五星</string>
    <string name="disc_liushen_name">六神</string>
    <string name="disc_dizhi_name">地支</string>
    <string name="disc_liuqin_name">六亲</string>
    <string name="disc_lougong_name">落宫</string>
    <string name="disc_gongwei_name">宫位</string>

    <string name="nav_home_name">首页</string>
    <string name="nav_setting_name">设置</string>

    <string name="tab_date_name">日期</string>
    <string name="tab_num_name">数字</string>
    <string name="tab_time_name">时间</string>
    <string name="tab_error_name">异常</string>

    <string name="home_matter_name">何事</string>

    <string name="home_time_title">时间</string>
    <string name="home_time_desc">子时午刻 0时1分</string>

    <string name="home_date_title">日期</string>
    <string name="home_date_desc">壬寅虎年腊月初十 2023年1月1日</string>

    <string name="home_num_title">数字</string>
    <string name="home_num_error">请输入数字</string>
    <string name="home_num_rand">随机骰子</string>

    <string name="home_btn_start">开始排盘</string>

    <string name="setting_developer">开发作者：%1$s</string>
    <string name="setting_version">软件版本：%1$s (%2$s)</string>
    <string name="setting_logs">排盘记录</string>

    <string name="toolbar_clear_name">清空</string>
    <string name="toolbar_delete_name">删除</string>
    <string name="toolbar_save_name">保存</string>

    <string name="logs_detail">排盘详情</string>
    <string name="logs_time">何时</string>
    <string name="logs_type">何类</string>
    <string name="logs_title">何事</string>
    <string name="logs_none">待定</string>
    <string name="logs_true">正确</string>
    <string name="logs_false">错误</string>
    <string name="logs_about">断语</string>
    <string name="logs_feedback">反馈</string>

</resources>