<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.logs.LogsDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/logsDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/logs_detail_toolbar_munu"
        app:navigationIcon="@drawable/ic_left_24dp"
        app:titleCentered="true"
        app:titleTextColor="?attr/colorOnPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logs_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logsDetailTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/md_theme_light_outline" />

        <RadioGroup
            android:id="@+id/logsDetailRgResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <RadioButton
                android:id="@+id/logsDetailRbNone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/logs_none" />

            <View
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_margin="15dp"
                android:background="@color/md_theme_light_outline" />

            <RadioButton
                android:id="@+id/logsDetailRbTrue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/logs_true" />

            <View
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_margin="15dp"
                android:background="@color/md_theme_light_outline" />

            <RadioButton
                android:id="@+id/logsDetailRbFalse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/logs_false" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/md_theme_light_outline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logsDetailEdtAboutLl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/logs_about"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logsDetailEdtAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/md_theme_light_outline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logsDetailEdtFeedbackLl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/logs_feedback"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logsDetailEdtFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <me.hd.xiaoliurenplus.ui.view.DiscView
                android:id="@+id/logsDetailDiscView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <me.hd.xiaoliurenplus.ui.view.DiscView
                android:id="@+id/logsDetailDiscView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <me.hd.xiaoliurenplus.ui.view.DiscView
                android:id="@+id/logsDetailDiscView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </me.hd.xiaoliurenplus.ui.view.DiscView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <me.hd.xiaoliurenplus.ui.view.DiscView
                android:id="@+id/logsDetailDiscView0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <me.hd.xiaoliurenplus.ui.view.DiscView
                android:id="@+id/logsDetailDiscView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <me.hd.xiaoliurenplus.ui.view.DiscView
                android:id="@+id/logsDetailDiscView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </me.hd.xiaoliurenplus.ui.view.DiscView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>